--- a/style.css
+++ b/style.css
@@ -6,8 +6,15 @@
 
 img {
   width: 15.5rem;
+}
+
+.card img {
   margin-top: -2rem;
   /*   border: 2px rgb(127, 25, 42) solid; */
+}
+
+.card-green img {
+  margin-top: -0.7rem;
 }
 
 body {
@@ -17,7 +24,12 @@ body {
   min-height: 100vh;
   background-color: #131313;
 }
-
+h1 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  color: rgba(255, 255, 255, 0.243);
+}
 .container {
   /*  position: relative; */
   display: flex;
