--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ h1 {
 .container {
   /*  position: relative; */
   display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
