--- a/styleBooks.css
+++ b/styleBooks.css
@@ -5,12 +5,17 @@
 .container div {
   display: flex;
 }
-
+.titleBook {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  color: rgba(146, 76, 184, 0.606);
+}
 .box {
   width: 100px;
   height: 350px;
   position: relative;
-  margin-left: 5rem;
+  margin: 0 5rem;
   background: whitesmoke;
 }
 
