--- a/styleShoes.css
+++ b/styleShoes.css
@@ -11,15 +11,15 @@ img {
   margin-top: -0.7rem;
 }
 
-body {
+/* body {
   background-color: #131313;
-}
+} */
 
-h1 {
+.titleShoes {
   display: flex;
   justify-content: center;
   margin-bottom: 2rem;
-  color: rgba(255, 255, 255, 0.243);
+  color: rgba(84, 84, 84, 0.606);
 }
 .container {
   /*  position: relative; */
@@ -73,7 +73,7 @@ h1 {
   content: "New";
   position: absolute;
   top: 40%;
-  font-size: 8.5em;
+  font-size: 4.5em;
   left: -10%;
   font-weight: 800;
   font-style: italic;
@@ -137,9 +137,11 @@ h1 {
 .container .card .contentBx h2,
 .container .card-green .contentBx h2,
 .container .card-blue .contentBx h2 {
-  position: relative;
+  position: absolute;
+  width: 100%;
   height: 7.5rem;
   font-weight: 600;
+  font-size: 1.5rem;
   letter-spacing: 1px;
   color: #fff;
 }
@@ -150,7 +152,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 8px 10px; */
+  padding: 8px 10px;
 }
 
 .container .card .contentBx .size h3,
@@ -199,16 +201,18 @@ h1 {
 .container .card .contentBx .link,
 .container .card-green .contentBx .link,
 .container .card-blue .contentBx .link {
-  position: relative;
+  position: absolute;
   background: #fff;
-  border-radius: 2px;
-  width: 30%;
+  border-radius: 4px;
+  width: 23%;
   left: 55%;
-  top: 2rem;
+  top: 10rem;
   font-size: small;
   text-decoration: none;
+  align-items: center;
   transition: none;
   transform: none;
+  padding: 0.2rem;
 }
 a {
   text-decoration: none;
